# FlashRead

./: README.md
.github/workflows/: backend-test.yaml  coverage.yaml  dev_flashread.yml  frontend-test.yaml  main_flashread.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  setupTests.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
client/coverage/: clover.xml  index.html
client/coverage/src/: App.tsx.html  index.html  main.tsx.html
client/coverage/src/FrontTests/: App.test.tsx.html  aboutPage.test.tsx.html  contactPage.test.tsx.html  homePage.test.tsx.html  index.html  loginPage.test.tsx.html  mode1Page.test.tsx.html  mode2Page.test.tsx.html  registerPage.test.tsx.html
client/coverage/src/components/: PrivateRoute.tsx.html  animatedText.tsx.html  axiosWrapper.tsx.html  bulletPoint.tsx.html  choiceBox.tsx.html  (+8 more)
client/src/: App.tsx
client/src/FrontTests/: App.test.tsx  aboutPage.test.tsx  backgroundService.test.tsx  contactPage.test.tsx  deleteAccount.test.tsx  homePage.test.tsx  loginPage.test.tsx  main.test.tsx  mode1Page.test.tsx  mode2Page.test.tsx  profilePage.test.tsx  registerPage.test.tsx  search.test.tsx  userPage.test.tsx
client/src/components/: animatedText.tsx  axiosWrapper.tsx  bulletPoint.tsx  choiceBox.tsx  dropdown.tsx  editableField.tsx  messageHandle.tsx  profileCard.tsx  searchInput.tsx  timerInput.tsx  timerMode2.tsx
client/src/context/: AuthContext.tsx  VisualSettingsContext.tsx
client/src/services/: authService.ts  backgroundService.tsx
client/wasm/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  README.md  debug_api.py  externs.js
client/wasm/interface/: wasmInterface.d.ts  wasmInterface.js  wasmInterface.wasm
client/wasm/objpacker/: objpacker
client/wasm/src/: main.cpp
client/wasm/src/core/: Camera.h  Components.h  EntityFlags.h  PhysicsWorld.cpp  PhysicsWorld.h  Scene.cpp  Scene.h
client/wasm/src/game/: GameActions.h  GameComponents.h  GameScene.cpp  GameScene.h  ModelInit.cpp  ModelInit.h  ObjectCarry.cpp  ObjectCarry.h  Player.cpp  Player.h  Script.h  SettingsScreen.cpp  SettingsScreen.h  TestScene.cpp  TestScene.h
client/wasm/src/game/scripts/: ControlHintsScript.cpp  ControlHintsScript.h  HeldObjectScript.cpp  HeldObjectScript.h  MainScript.cpp  MainScript.h  ObjectInteractScript.cpp  ObjectInteractScript.h  SecretDoorScript.cpp  SecretDoorScript.h
client/wasm/src/meshes/: candle.h  chair.h  closedBook.h  emptyBookshelf.h  fullBookshelf.h  globe.h  lectern.h  openBook.h  pencil.h  table.h
client/wasm/src/rendering/: Debug.cpp  Debug.h  GBuffer.cpp  GBuffer.h  Renderer.cpp  Renderer.h
client/wasm/src/rendering/shaders/: csm.vs  debug.fs  debug.vs  light.fs  mesh.fs  mesh.vs
client/wasm/src/scenes/: firstmap.h  test.h  world1.h
client/wasm/src/util/: SceneBuilder.cpp  SceneBuilder.h
server/server/: ConnectionStringBuilder.cs  appsettings.json  server.csproj
server/server.Tests/: AccountSettingsControllerTests.cs  ConnectionStringBuilderTests.cs  DbObjectTest.cs  DbUserMethodTest.cs  IUserAPITest.cs  StringExtensionTest.cs  UserCollectionTests.cs  UserControllerTests.cs  UserHandlerTests.cs  UserTests.cs  server.Tests.csproj
server/server.Tests/ControllerTests/: AccountSettingsControllerTests.cs  AuthControllerTests.cs  ChatControllerTests.cs  HealthCheckControllerTests.cs  Task3ControllerTests.cs  TaskControllerTests.cs  UserControllerTests.cs
server/server.Tests/ExceptionMiddlewareTests/: ExceptionMiddlewareTests.cs
server/server.Tests/Services/: HistoryManagerTests.cs  SessionBackgroundServiceTests.cs  SessionManagerTests.cs
server/server.Tests/TaskTests/: Task1Tests.cs
server/server.Tests/TokenProviderTests/: TokenProviderTests.cs
server/server/Migrations/: 20241125125922_InitialCreate.Designer.cs  20241125125922_InitialCreate.cs  FlashDbContextModelSnapshot.cs
server/server/Properties/: launchSettings.json
server/server/src/: DbContextFactory.cs  FlashDbContext.cs  Program.cs
server/server/wwwroot/: index.html
(+144 files in other folders)
